tests/ui/ferrocene/compiler-arguments/upper_c_metadata/upper_c_metadata_space-empty.rs
//@ check-fail
//@ compile-flags: -C metadata
//~? ERROR requires a space-separated list of strings

fn main() {}

// ferrocene-annotations: um_rustc_C_metadata
